--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,5 +4,8 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title myZoom
+        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body 
-        h1 hi!
+        h1 It works! 
+        button Call
+        script(src="/public/js/app.js")
