--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,6 +6,14 @@ html(lang="en")
         title myZoom
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body 
-        h1 It works! 
-        button Call
+        header 
+            h1 YOOM
+        main 
+            form#nick
+                input(type="text", placeholder="choose a nickname", required)
+                button Save
+            ul  
+            form#message
+                input(type="text", placeholder="write a message", required)
+                button Send
         script(src="/public/js/app.js")
